package com.example.swen261cafemanagement.controllers;

import org.springframework.stereotype.Controller;
import org.springframework.web.bind.annotation.RequestMapping;

@Controller
public class MainController {

    @RequestMapping("/Welcome")
    public String getWelcome() {
        return "Welcome.html";
    }

    @RequestMapping("/dashboard")
    public String getDashboard() {
        return "dashboard";
    }
}
