package com.example.swen261cafemanagement.models;

public class User {
    public String name;
    public String email;
    public String password;

    public User(String name, String email, String password_hashed) {
        this.name = name;
        this.email = email;
        this.password = password_hashed;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }
}
